syntax = "proto3";

package gs.service.permission;

import "konekko.me/gosion/commons/dto/commons.proto";

//功能
service Function {

    rpc Add (FunctionRequest) returns (gs.commons.dto.Status);

    rpc Rename (FunctionRequest) returns (gs.commons.dto.Status);

    rpc Move (FunctionRequest) returns (gs.commons.dto.Status);

    rpc AddGroup (FunctionGroupRequest) returns (gs.commons.dto.Status);

    rpc MoveGroup (FunctionGroupRequest) returns (gs.commons.dto.Status);

    rpc RenameGroup (FunctionGroupRequest) returns (gs.commons.dto.Status);


}

message FunctionRequest {
    string structureId = 1;
    string name = 2;
    string api = 3;
    int64 type = 4;
    string bindGroupId = 5;
    repeated int64 authTypes = 6;
}

message FunctionGroupRequest {
    string structureId = 1;
    string name = 2;
    string bindGroupId = 3;
    int64 type = 4;
}